--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 
 
-dependencies = []
+dependencies = [
+    "loguru>=0.7",
+    "ibis-framework"
+]
 
 [dependency-groups]
 dev = [
