--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
+
 [project]
 name = "ibisgraph"
 version = "0.1.0"
@@ -20,3 +24,16 @@ dev = [
 
 [tool.ruff]
 line-length = 100
+
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.version.raw-options]
+version_scheme = "no-guess-dev"
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "ibisgraph",
+    "README.md",
+    "LICENSE",
+]
